--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <th><input id="canvas_dot" type="text" size="5" value="10" /></th>
                 <th>Замкнутая:</th>
                 <th> <input id="canvas_elapsed" type="checkbox" checked /> </th>
+                <th>Цветная:</th>
+                <th> <input id="canvas_colored" type="checkbox" checked /> </th>
             </tr>
         </table>
         <input id="submit" type="button" size="5" value="submit" />
